# bazel-python-coverage

./: .gitignore  MODULE.bazel  README.md
src/: .coveragerc  BUILD.bazel  lib_test.py  main.py  pytest_wrapper.py  requirements.txt
