bazel_dep(name = "rules_python", version = "1.9.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.10"
)
use_repo(
    python,
    python_3_10 = "python_3_10",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.10",
    requirements_lock = "//src:requirements.txt",
    # name = "pip",
    # requirements = "//:src/requirements_lock.txt",
)
use_repo(pip, "pypi")
